# docs/swagger.yaml
@@ -70,6 +70,15 @@ definitions:
       error:
         type: string
     type: object
+  models.Shipper:
+    properties:
+      company_name:
+        type: string
+      phone:
+        type: string
+      shipper_id:
+        type: integer
+    type: object
   models.SuccessResponse:
     properties:
       message:
@@ -339,4 +348,147 @@ paths:
       summary: Update an employee
       tags:
       - Employees
+  /api/v1/shippers:
+    get:
+      description: Returns a list of all shippers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Shipper'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get all shippers
+      tags:
+      - Shippers
+    post:
+      consumes:
+      - application/json
+      description: Creates a new shipper
+      parameters:
+      - description: Shipper to create
+        in: body
+        name: shipper
+        required: true
+        schema:
+          $ref: '#/definitions/models.Shipper'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Shipper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new shipper
+      tags:
+      - Shippers
+  /api/v1/shippers/{id}:
+    delete:
+      description: Deletes a shipper by ID
+      parameters:
+      - description: Shipper ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a shipper
+      tags:
+      - Shippers
+    get:
+      description: Returns a single shipper by ID
+      parameters:
+      - description: Shipper ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Shipper'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get shipper by ID
+      tags:
+      - Shippers
+    put:
+      consumes:
+      - application/json
+      description: Updates an existing shipper by ID
+      parameters:
+      - description: Shipper ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Shipper data to update
+        in: body
+        name: shipper
+        required: true
+        schema:
+          $ref: '#/definitions/models.Shipper'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Shipper'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update an existing shipper
+      tags:
+      - Shippers
 swagger: "2.0"
